kubernetes/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
  labels:
    app: db
spec:
  serviceName: "mysql-service"
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        volumeMounts:
        - name: my-storage
          mountPath: /var/lib/mysql
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
          limits:
            cpu: "1.5"
            memory: "2048Mi"
      restartPolicy: Always 
  volumeClaimTemplates:
  - metadata:
      name: my-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
      selector:
        matchLabels:
          app: storage
