kubernetes/headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  clusterIP: None  
  selector:
    app: db
  ports:
    - port: 3306
