kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: staging
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30100
      protocol: TCP

  selector:
    app: myapp
